# blockifier

./: Cargo.toml
.github/workflows/: ci.yml  compiled_cairo.yml  no_std.yml  post-merge.yml
crates/blockifier/: Cargo.toml
crates/blockifier/ERC20_without_some_syscalls/ERC20/: erc20_contract_without_some_syscalls_compiled.json
crates/blockifier/feature_contracts/cairo0/compiled/: account_faulty_compiled.json  account_without_validations_compiled.json  empty_contract_compiled.json  security_tests_contract_compiled.json  test_contract_compiled.json
crates/blockifier/feature_contracts/cairo1/compiled/: account_contract.casm.json  empty_contract.casm.json  test_contract.casm.json
crates/blockifier/src/: block_context.rs  block_execution.rs  block_execution_test.rs  lib.rs  scale_codecs.rs  test_utils.rs  utils.rs  utils_test.rs  with_std.rs  without_std.rs
crates/blockifier/src/abi/: abi_utils.rs  abi_utils_test.rs  constants.rs
crates/blockifier/src/execution/: cairo1_execution.rs  call_info.rs  common_hints.rs  contract_address_test.rs  contract_class.rs  deprecated_execution.rs  entry_point.rs  entry_point_execution.rs  entry_point_test.rs  errors.rs  execution_utils.rs  execution_utils_test.rs
crates/blockifier/src/execution/deprecated_syscalls/: deprecated_syscalls_test.rs  hint_processor.rs  mod.rs
crates/blockifier/src/execution/syscalls/: hint_processor.rs  mod.rs  syscalls_test.rs
crates/blockifier/src/fee/: fee_test.rs  fee_utils.rs  gas_usage.rs  os_resources.rs  os_usage.rs  os_usage_test.rs
crates/blockifier/src/state/: cached_state.rs  cached_state_test.rs  errors.rs  state_api.rs
crates/blockifier/src/transaction/: account_transaction.rs  account_transactions_test.rs  errors.rs  objects.rs  test_utils.rs  transaction_execution.rs  transaction_utils.rs  transactions.rs  transactions_test.rs
crates/blockifier/tests/: feature_contracts_compatibility_test.rs
crates/native_blockifier/: Cargo.toml
crates/native_blockifier/src/: papyrus_state.rs  papyrus_state_test.rs  py_state_diff.rs  py_test_utils.rs  py_transaction.rs  py_utils.rs  storage.rs
ensure_no_std/: Cargo.toml
ensure_no_std/src/: main.rs
scripts/: rust_fmt.sh
