[workspace]
# Using version 2 to avoid unifying features. For more info, read:
#   https://doc.rust-lang.org/cargo/reference/resolver.html#feature-resolver-version-2
resolver = "2"

members = ["crates/blockifier"]
exclude = ["ensure_no_std"]

[workspace.package]
version = "0.1.0-rc2"
edition = "2021"
repository = "https://github.com/starkware-libs/blockifier/"
license = "Apache-2.0"
license-file = "LICENSE"

[workspace.dependencies]
ark-ff = { version = "0.4.0-alpha.7", default-features = false }
ark-secp256k1 = { version = "0.4.0", default-features = false }
assert_matches = { version = "1.5.0", default-features = false }
cached = { version = "0.44.0", default-features = false }
cairo-felt = { git = "https://github.com/apoorvsadana/cairo-rs.git", branch = "no_std-support-08-aug-23", default-features = false }
cairo-vm = { git = "https://github.com/apoorvsadana/cairo-rs.git", branch = "no_std-support-08-aug-23", default-features = false }
cairo-lang-casm = { git = "https://github.com/apoorvsadana/cairo.git", branch = "no_std-support-08-aug-23", default-features = false }
cairo-lang-casm-contract-class = { git = "https://github.com/apoorvsadana/cairo.git", branch = "no_std-support-08-aug-23", default-features = false }
cairo-lang-utils = { git = "https://github.com/apoorvsadana/cairo.git", branch = "no_std-support-08-aug-23", default-features = false }
cairo-lang-vm-utils = { git = "https://github.com/apoorvsadana/cairo.git", branch = "no_std-support-08-aug-23", default-features = false }
ctor = { version = "0.2.0", default-features = false }
derive_more = { version = "0.99.17", default-features = false }
hex = { version = "0.4.3", default-features = false }
indexmap = { git = "https://github.com/bluss/indexmap", rev = "ca5f848e10c31e80aeaad0720d14aa2f6dd6cfb1", default-features = false }
itertools = { version = "0.10.3", default-features = false }
keccak = { version = "0.1.3", default-features = false }
log = { version = "0.4", default-features = false }
num-bigint = { version = "0.4", default-features = false }
num-integer = { version = "0.1.45", default-features = false }
num-traits = { version = "0.2", default-features = false }
rstest = { version = "0.17.0", default-features = false }
ouroboros = { version = "0.15.6", default-features = false }
papyrus_storage = { version = "0.0.4", default-features = false }
parity-scale-codec = { version = "3.6.0", default-features = false }
phf = { version = "0.11", features = ["macros"], default-features = false }
pretty_assertions = { version = "1.2.1", default-features = false, features = [
    "alloc",
] }
scale-info = { version = "2.8.0", default-features = false }
serde = { version = "1.0.130", default-features = false }
serde_json = { version = "1.0.81", default-features = false }
sha3 = { version = "0.10.6", default-features = false }
starknet_api = { git = "https://github.com/apoorvsadana/starknet-api", branch = "no_std-support-08-aug-23", default-features = false, features = [
    "parity-scale-codec",
] }
strum = { version = "0.24.1", default-features = false }
strum_macros = { version = "0.24.3", default-features = false }
test-case = { version = "2.2.2", default-features = false }
hashbrown = { version = "0.14.0", default-features = false }
thiserror-no-std = { version = "2.0.2", default-features = false }
lazy_static = { version = "1.4.0", default-features = false, features = [
    "spin_no_std",
] }
starknet-crypto = { version = "0.5.1", default-features = false }
parking_lot = { version = "0.12.1", default-features = false }
libm = { version = "0.2.7", default-features = false }
