[workspace]
# Using version 2 to avoid unifying features. For more info, read:
#   https://doc.rust-lang.org/cargo/reference/resolver.html#feature-resolver-version-2
resolver = "2"

members = ["crates/blockifier"]
exclude = ["ensure_no_std"]

[workspace.package]
version = "0.1.0-rc2"
edition = "2021"
repository = "https://github.com/starkware-libs/blockifier/"
license = "Apache-2.0"
license-file = "LICENSE"

[workspace.dependencies]
ark-ff = { version = "0.4.0-alpha.7", default-features = true }
ark-secp256k1 = { version = "0.4.0", default-features = true }
assert_matches = { version = "1.5.0", default-features = true }
cached = { version = "0.44.0", default-features = true }
cairo-felt = { git = "https://github.com/keep-starknet-strange/cairo-rs.git", branch = "no_std-support-21eff70", default-features = true }
cairo-vm = { git = "https://github.com/keep-starknet-strange/cairo-rs.git", branch = "no_std-support-21eff70", default-features = true }
cairo-lang-casm = { git = "https://github.com/keep-starknet-strange/cairo.git", branch = "no_std-support-8bbf530", default-features = true }
cairo-lang-casm-contract-class = { git = "https://github.com/keep-starknet-strange/cairo.git", branch = "no_std-support-8bbf530", default-features = true }
cairo-lang-utils = { git = "https://github.com/keep-starknet-strange/cairo.git", branch = "no_std-support-8bbf530", default-features = true }
cairo-lang-vm-utils = { git = "https://github.com/keep-starknet-strange/cairo.git", branch = "no_std-support-8bbf530", default-features = true }
ctor = { version = "0.2.0", default-features = true }
derive_more = { version = "0.99.17", default-features = true }
hex = { version = "0.4.3", default-features = true }
indexmap = { git = "https://github.com/bluss/indexmap", rev = "ca5f848e10c31e80aeaad0720d14aa2f6dd6cfb1", default-features = true }
itertools = { version = "0.10.3", default-features = true }
keccak = { version = "0.1.3", default-features = true }
log = { version = "0.4", default-features = true }
num-bigint = { version = "0.4", default-features = true }
num-integer = { version = "0.1.45", default-features = true }
num-traits = { version = "0.2", default-features = true }
rstest = { version = "0.17.0", default-features = true }
ouroboros = { version = "0.15.6", default-features = true }
papyrus_storage = { version = "0.0.4", default-features = true }
parity-scale-codec = { version = "3.6.0", default-features = true }
phf = { version = "0.11", features = ["macros"], default-features = true }
pretty_assertions = { version = "1.2.1", default-features = true, features = [
  "alloc",
] }
scale-info = { version = "2.8.0", default-features = true }
serde = { version = "1.0.130", default-features = true }
serde_json = { version = "1.0.81", default-features = true }
sha3 = { version = "0.10.6", default-features = true }
spin = { version = "0.9.8", default-features = true }
starknet_api = { git = "https://github.com/keep-starknet-strange/starknet-api", branch = "no_std-support-dc83f05", default-features = true }
strum = { version = "0.24.1", default-features = true }
strum_macros = { version = "0.24.3", default-features = true }
test-case = { version = "2.2.2", default-features = true }
hashbrown = { version = "0.14.0", default-features = true }
thiserror-no-std = { version = "2.0.2", default-features = true }
lazy_static = { version = "1.4.0", default-features = true, features = [
  "spin_no_std",
] }
starknet-crypto = { git = "https://github.com/xJonathanLEI/starknet-rs.git", rev = "64ebc36", default-features = true }
