[package]
name = "blockifier"
version = "0.1.0"
edition = "2021"

[features]
default = ["std"]
std = [
    "cairo-felt/std",
    "cairo-vm/std",
    "cairo-lang-casm/std",
    "cairo-lang-casm-contract-class/std",
    "cairo-lang-utils/std",
    "cairo-lang-vm-utils/std",
    "indexmap/std",
    "itertools/use_std",
    "num-bigint/std",
    "num-integer/std",
    "num-traits/std",
    "parity-scale-codec?/std",
    "scale-info?/std",
    "serde/std",
    "serde_json/std",
    "sha3/std",
    "starknet_api/std",
    "strum/std",
    "phf/std",
    "thiserror-no-std/std",
    "log/std",
    "starknet-crypto/std",
]
testing = ["parity-scale-codec"]
parity-scale-codec = [
    "dep:parity-scale-codec",
    "starknet_api/parity-scale-codec",
    "cairo-vm/parity-scale-codec",
]
scale-info = [
    "dep:scale-info",
    "starknet_api/scale-info",
]

[dependencies]
cairo-felt = { workspace = true, features = ["alloc"] }
cairo-vm = { workspace = true, features = ["cairo-1-hints"] }
cairo-lang-casm = { workspace = true }
cairo-lang-casm-contract-class = { workspace = true }
cairo-lang-utils = { workspace = true }
cairo-lang-vm-utils = { workspace = true, features = ["execute_core_hints"] }
derive_more = { workspace = true, features = ["into_iterator", "from"] }
indexmap = { workspace = true, features = ["serde"] }
itertools = { workspace = true }
num-bigint = { workspace = true }
num-integer = { workspace = true }
num-traits = { workspace = true }
parity-scale-codec = { workspace = true, optional = true, features = [
    "derive", "max-encoded-len",
] }
scale-info = { workspace = true, optional = true, features = ["derive"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["arbitrary_precision"] }
sha3 = { workspace = true }
starknet_api = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
phf = { workspace = true }
log = { workspace = true }
hashbrown = { workspace = true }
lazy_static = { workspace = true }
thiserror-no-std = { workspace = true }
starknet-crypto = { workspace = true }
libm = { workspace = true }

[dev-dependencies]
starknet_api = { workspace = true, features = ["testing"] }
assert_matches.workspace = true
pretty_assertions.workspace = true
test-case.workspace = true
