[package]
name = "blockifier"
version.workspace = true
edition.workspace = true
repository.workspace = true
license-file.workspace = true
description = "The transaction-executing component in the StarkNet sequencer."

[package.metadata.cargo-udeps.ignore]
normal = ["spin"]

[features]
default = ["std" ]
std = [
  "cairo-felt/std",
  "cairo-vm/std",
  "cairo-lang-casm/std",
  "cairo-lang-casm-contract-class/std",
  "cairo-lang-utils/std",
  "cairo-lang-vm-utils/std",
  "indexmap/std",
  "itertools/use_std",
  "num-bigint/std",
  "num-integer/std",
  "num-traits/std",
  "parity-scale-codec?/std",
  "scale-info?/std",
  "serde/std",
  "serde_json/std",
  "sha3/std",
  "starknet_api/std",
  "strum/std",
  "phf/std",
  "thiserror-no-std/std",
  "num-bigint/std",
  "dep:cached",
  "log/std",
  "starknet-crypto/std",
  "sp-arithmetic/std",
]
testing = ["parity-scale-codec"]
parity-scale-codec = [
  "dep:parity-scale-codec",
  "starknet_api/parity-scale-codec",
  "cairo-vm/parity-scale-codec",
]
scale-info = ["dep:scale-info", "starknet_api/scale-info"]

[dependencies]
ark-ff.workspace = true
ark-secp256k1.workspace = true
cached = { workspace = true, optional = true }
cairo-felt = { workspace = true, features = ["alloc"] }
cairo-vm = { workspace = true, features = ["cairo-1-hints"] }
cairo-lang-casm = { workspace = true }
cairo-lang-casm-contract-class = { workspace = true }
cairo-lang-utils = { workspace = true }
cairo-lang-vm-utils = { workspace = true, features = ["execute_core_hints"] }
derive_more = { workspace = true, features = [
  "into_iterator",
  "from",
  "deref",
  "deref_mut",
] }
indexmap = { workspace = true, features = ["serde"] }
itertools = { workspace = true }
keccak.workspace = true
log.workspace = true
num-bigint = { workspace = true }
num-integer = { workspace = true }
num-traits = { workspace = true }
parity-scale-codec = { workspace = true, optional = true, features = [
  "derive",
  "max-encoded-len",
] }
sp-arithmetic = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.3.0", default-features = false }
scale-info = { workspace = true, optional = true, features = ["derive"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["arbitrary_precision"] }
sha3 = { workspace = true }
starknet_api = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
phf = { workspace = true }
hashbrown = { workspace = true }
lazy_static = { workspace = true }
thiserror-no-std = { workspace = true }
starknet-crypto = { workspace = true }
spin = { workspace = true, features = ["mutex", "spin_mutex"] }

[dev-dependencies]
starknet_api = { workspace = true, features = ["testing"] }
assert_matches.workspace = true
pretty_assertions.workspace = true
rstest.workspace = true
test-case.workspace = true
